syntax = "proto3";

package com.eycads.protocols.sdk.uniqueConstraint.states;

import "scalapb/scalapb.proto";
import "sdk/alona_options.proto";
import "sdk/sdk_common.proto";

option (scalapb.options) = {
    single_file: true
};

message UniqueConstraintStateData {
    option (com.eycads.customOptions.alona_message).type_id = 1012000;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.StateData";
    string id = 1;
    string owner_id = 2;
    string code = 3;
    com.eycads.protocols.sdk.ShardingDetails sharding_details = 4;
    repeated string values = 5 [(scalapb.field).collection_type="scala.collection.immutable.HashSet"];
}

message Initial {
    option (com.eycads.customOptions.alona_message).type_id = 1012001;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.UniqueConstraintState";
    UniqueConstraintStateData stateData = 1 [(scalapb.field).no_box = true];
}

message Ready {
    option (com.eycads.customOptions.alona_message).type_id = 1012002;
    option (scalapb.message).extends = "com.eycads.sdk.protocols.UniqueConstraintState";
    UniqueConstraintStateData stateData = 1 [(scalapb.field).no_box = true];
}
